--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pkg
 
 Gemfile.lock
 
+nbproject
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
 # * Create a file at ~/.gitignore
